tests/unit-fail-compilation/subtraction-null.c.ref
subtraction-null.c:3:3: error: Computing pointer difference between two different objects.
  Undefined behavior (UB-CEA5).
   see C11 section 6.5.6:9 http://rvdoc.org/C11/6.5.6
   see C11 section J.2:1 item 48 http://rvdoc.org/C11/J.2
   see CERT-C section ARR36-C http://rvdoc.org/CERT-C/ARR36-C
Translation failed (config dumped). Run kcc -d subtraction-null.c to see commands run.
